# receipthub

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.sample.yaml
receipthub/cli/: main.py
receipthub/daemon/: __main__.py  server_uds.py  workers.py
